fixed error position mobile heroku

--- a/src/App.css
+++ b/src/App.css
@@ -203,15 +203,22 @@ color: #888888 !important;
 
   .error-position {
     position: absolute;
-    left: 1%;
-    right: 65%;
-    top: 5%;
+    left: 37%;
+    right: 18%;
+    top: 60%;
+  }
+
+  .full-name-error-position {
+    position: absolute;
+    left: 37%;
+    right: 5%;
+    top: 33%;
   }
 
   .form-position {
     position: absolute;
     left: 37.01%;
-    right: 10%;
+    right: 0%;
     top: 5%;
     bottom: 63.68%;
     box-sizing: border-box;
@@ -239,8 +246,6 @@ color: #888888 !important;
     position: absolute;
     left: 0%;
     right: 0%;
-    top: 150%;
-    bottom: 33%;
     background: #FFFFFF;
     mix-blend-mode: normal;
     opacity: 0.1;
@@ -279,8 +284,8 @@ color: #888888 !important;
 
   .full-name-button {
     position: absolute;
-    left: 6%;
-    top: 365%;
+    left: 43%;
+    top: 295%;
   }
 
   .congratulations-body-text {
@@ -289,13 +294,6 @@ color: #888888 !important;
     line-height: 15px;
     font-size: 3vw;
     color: #94AEBF;
-  }
-
-  .full-name-error-position {
-    position: absolute;
-    left: 0%;
-    right: 1%;
-    top: 70%;
   }
 
   .form-position-final {
